# lzan

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md
asm6502/: Cargo.toml  LICENSE
decrunchers/: MANIFEST.md  README.md  aplib-apultra-brandwood-6502-opt-size.s  aplib-apultra-brandwood-6502.s  aplib-apultra-marty-backward.s  bolt-backward.s  bolt-opt-speed-backward.s  bolt-opt-speed.s  bolt.s  byteboozer2-difraia-backward.s  byteboozer2-difraia-opt-size.s  byteboozer2-difraia.s  exomizer-lind-mem-backward.s  exomizer-lind-mem-forward.s  lzan-decoder-full-backward.s  lzan-decoder-full-opt-speed.s  lzan-decoder-full.s  lzan-decoder-min-backward.s  lzan-decoder-min-opt-speed.s  lzan-decoder-min.s  lzsa1-brandwood-faster.s  lzsa1-marty-small-backward.s  lzsa1-marty-small-legal-backward.s  lzsa1-marty-small-legal.s  lzsa1-marty-small.s  lzsa2-marty-small-backward.s  lzsa2-marty-small-legal-backward.s  lzsa2-marty-small-legal.s  lzsa2-marty-small.s  pucrunch-lzan-backward.s  pucrunch-lzan-legal-backward.s  pucrunch-lzan-legal.s  pucrunch-lzan-zpstack.s  pucrunch-lzan.s  shrinkler-atari8xxl-unshrinkler-backward.s  shrinkler-atari8xxl-unshrinkler-opt-size.s  shrinkler-atari8xxl-unshrinkler.s  subsizer-tlr-standalone-forward.s  subsizer-tlr-standalone-opt-size.s  subsizer-tlr-standalone.s  (+14 more)
examples/: pucrunch.rs
licenses/: CREDITS.md  LICENSE-apultra.md  README.md  (+9 more)
lzan-c64/: Cargo.toml  README.md
lzan-c64/examples/: dump_sfx_source.rs
lzan-c64/src/: builder.rs  decoder_gates.rs  decoder_tailoring.rs  emit.rs  lib.rs  registry.rs  zp_safety.rs
(+36 files in other folders)
