[package]
name = "lzan-c64"
version = "1.0.2"
edition = "2021"
license = "MIT"
description = "C64 decrunch framework: emits configurable 6502 decrunch routines and self-extracting programs in asm6502 format, from the decrunchers/ collection."

# This crate is intentionally a separate workspace.
[workspace]

[dependencies]
# Local 6502 assembler.
asm6502 = { path = "../asm6502/asm6502" }

# Compression encoders used by pack().
lzan = { path = ".." }
